--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+ACCESS_TOKEN_SERVICE_URL=https://gray-mayfly-6642.twil.io/token-service
